--- a/src/components/Schedule/Schedule.css
+++ b/src/components/Schedule/Schedule.css
@@ -1,4 +1,5 @@
 .save_row {
+	margin-top: 20px;
 	display: flex;
 	gap: 8px;
 }
@@ -24,28 +25,48 @@
 }
 
 .col_head {
-	border-bottom: 1px solid white;
+	border-bottom: 1px solid var(--text-color);
 }
 
 .row_head {
-	width: 100px;
-	border-bottom: 1px solid white;
-	text-align: center;
-	align-items: center;
-	display: flex;
-	justify-content: space-between;
-}
-
-td,
-th {
-	vertical-align: middle;
-	padding: 2px;
+	width: 100%;
+	min-height: 100px;
+	min-width: 100px;
+	border-bottom: 1px solid var(--text-color);
 	text-align: center;
 	align-items: center;
 }
 
 td {
+	min-height: 100px;
+	min-width: 100px;
+	padding: 2px;
+	vertical-align: middle;
+	padding: 2px;
+	text-align: center;
+	align-items: center;
+	min-width: 100px;
+	min-height: 100px;
+}
+
+th {
+	vertical-align: middle;
+
+	div {
+		width: 100%;
+		height: 100%;
+	}
+}
+
+td {
 	cursor: pointer;
+	border-right: solid 1px var(--text-color);
+	border-bottom: solid 1px var(--text-color);
+}
+
+
+tr td:last-child {
+	border: 1 solid red;
 }
 
 .lesson {
@@ -74,14 +95,47 @@ td {
 
 select {
 	padding: 8px;
-	font-size: 16px;
+	font-size: 14px;
 	border-radius: 8px;
+}
+
+select:invalid {
+	border: 2px solid red;
 }
 
 option {
 	border-radius: 8px;
 }
 
+.select_option {
+	color: red;
+}
+
 button {
 	cursor: pointer;
+}
+
+.exist {
+	background: orange;
+}
+
+form {
+	.button_row {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.delete {
+		background: red;
+		color: white;
+	}
+}
+
+.schedule_type_row {
+	display: flex;
+	gap: 8px;
+
+	.enable {
+		background: gray;
+	}
 }
